Changelog
=========

1.1.5 (unreleased)
------------------


1.1.4 (2001-07-15)
------------------

- Update German translations and fix translation of
  COMMENT_DESCRIPTION_MODERATION_ENABLED
  [fRiSi]
  
- Fix discussion control panel submit for Google Chrome. This fixes 
  http://dev.plone.org/plone/ticket/11486.
  [timo]


1.1.3 (2011-06-16)
------------------

- Do not render/update the comment form in CommentViewlets if commenting is
  disabled, since this slows down the page rendering. This fixes
  http://dev.plone.org/plone/ticket/11930
  [fafhrd]


1.1.2 (2011-05-29)
------------------

- Revert handleComment method clean up (r50082), since this broke the comment form.
  [timo]

- Fix missing handleComment method. This fixes
  http://dev.plone.org/plone/ticket/11861.
  [timo]


1.1.1 (2011-05-28)
------------------

- Refactor/clean up the handleComment method.
  [timo]

- Make handleComment method store comment attributes from form extenders. This
  allows us to extend the comment form with external add-ons. See
  http://packages.python.org/plone.app.discussion/howtos/howto_extend_the_comment_form.html
  for details.
  [timo]


1.1 (2011-05-03)
----------------

- Fix missing translations for comment formatting. This fixes
  http://dev.plone.org/plone/ticket/11671.
  [timo]

- Translations updated.
  [timo]

- Add a moderator_email setting to control where moderator notifications are
  sent.
  [davisagli]

- Added Afrikaans translations
  [jcbrand]

- Fixed test failure for the default user portrait, which changed from
  defaultUser.gif to defaultUser.png in Products.PlonePAS 4.0.5.
  [maurits]


1.0 (2011-02-07)
----------------

- Do not check for a comment review workflow when sending out a moderator email
  notification. This fixes http://dev.plone.org/plone/ticket/11444.
  [timo]

- Check if the current user has configured an e-mail address for the email
  notification option. This fixes http://dev.plone.org/plone/ticket/11428.
  [timo]

